Corrected line alignment

--- a/src/styles/app.less
+++ b/src/styles/app.less
@@ -69,12 +69,14 @@ body {
 #appIllustrations {
     display: block;
     position: absolute;
+    left: 0;
+    top:0;
     height: 100%;
     width: 100%;
     pointer-events: none;
     .line-1 {
         stroke-linecap: round;
-        stroke-width: 20;
+        stroke-width: 15;
         stroke-opacity: 0.5;
         stroke: #C3F1FE;
     }
